# rstwrap

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  rst-wrap-lines.py  rst_wrap_lines.py  rstwrap.py
.github/workflows/: publish.yml  tests.yml
tests/: __init__.py  conftest.py  test_cli.py  test_cpython_docs.py  test_directives.py  test_inline.py  test_integration.py  test_internals.py  test_join.py  test_lists.py  test_passthrough.py  test_prose.py
tests/rst/: anonymous_hyperlink_target.rst  bullets_after_indented.rst  definition_list_term.rst  doctest_block_unindented.rst  list_after_indented_target.rst  list_after_nested_continuation.rst  list_after_section_underline.rst  list_item_preserve_prefix_spacing.rst  list_item_tab_after_bullet.rst  list_item_with_line_block.rst  nested_bullet_not_merged_into_parent.rst  no_lengthen_list_item.rst  no_lengthen_prose.rst  short_section_underline.rst  single_char_title_underline.rst  uncommon_underline_chars.rst
tests/rst/examples/: list_nested_bullet_not_merged_into_parent.rst  list_nested_wrapped.rst
tests/rst/regressions/: bare_two_dash_before_prose.rst  blank_lines_directive_body_boundary.rst  code_block_directive.rst  code_block_literal.rst  directive_indented_body_yaml.rst  directive_malformed_parsed_as_comment.rst  enum_item_with_col0_continuation.rst  enum_parenthesized_letter.rst  field_list_with_inline_literal_name.rst  hyperlink_anonymous_target.rst  list_after_short_underline.rst  list_bullets_after_indented.rst  list_enum_item_with_col0_continuation.rst  list_enum_parenthesized_letter.rst  list_indented_bullet_after_prose_no_blank.rst  list_indented_bullet_in_literal_block.rst  list_lengthen_unsplittable_item.rst  list_no_lengthen_item.rst  list_tab_indented_nested_bullets.rst  literal_code_block_doctest.rst  literal_doctest_block_unindented.rst  literal_quoted_block.rst  literal_quoted_with_bullet_chars.rst  literal_standalone_double_colon.rst  malformed_directive_parsed_as_comment.rst  misc_collapse_consecutive_blank_lines.rst  nested_simple_table.rst  option_list.rst  overlined_short_title.rst  prose_bare_two_dash_before.rst  prose_before_indented_no_blank.rst  prose_lengthen_unsplittable.rst  prose_no_lengthen.rst  prose_short_lines_joining.rst  quoted_literal_block.rst  quoted_literal_with_bullet_chars.rst  section_overlined_short_title.rst  section_short_underline.rst  section_short_underline_no_blank_before_body.rst  section_single_char_title_underline.rst  (+6 more)
