[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rstwrap"
version = "0.1.1"
description = "Wrap prose paragraphs in reStructuredText files to a max line width"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Giampaolo Rodola", email = "g.rodola@gmail.com"}]
keywords = ["docs", "formatter", "restructuredtext", "rst", "sphinx", "wrap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: reStructuredText",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/giampaolo/rstwrap"
Source = "https://github.com/giampaolo/rstwrap"
Issues = "https://github.com/giampaolo/rstwrap/issues"
Changelog = "https://github.com/giampaolo/rstwrap/blob/master/CHANGELOG.md"

[project.optional-dependencies]
lint = ["black", "build", "ruff", "toml-sort", "twine", "validate-pyproject"]
safe = ["docutils"]
test = ["docutils", "pytest", "pytest-instafail", "pytest-xdist"]

[project.scripts]
rstwrap = "rstwrap:main"

[tool.setuptools]
py-modules = ["rstwrap"]

[tool.pytest.ini_options]
addopts = [
    "--capture=no",
    "--instafail",
    "--no-header",
    "--strict-config",
    "--tb=short",
    "--verbose",
    "-p instafail",
    "-p no:doctest",
    "-p no:junitxml",
    "-p no:nose",
    "-p no:pastebin",
    "-p xdist",
]
verbosity_subtests = "0"
testpaths = ["tests/"]
python_files = ["test_*.py"]
strict_markers = true
markers = [
    "slow: marks tests as slow (deselected by default; run with -m '')",
]

[tool.black]
target-version = ["py311"]
line-length = 79
preview = true
enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets", "string_processing", "wrap_long_dict_values_in_parens"]

[tool.ruff]
# https://beta.ruff.rs/docs/settings/
target-version = "py311"
line-length = 79

[tool.ruff.lint]
preview = true
extend-safe-fixes = [
    "PLR6201",  # turn `1 in (1, 2)` into `1 in {1, 2}`
]
select = [
    # To get a list of all values: `python3 -m ruff linter`.
    "ALL",
    "D200",  # [*] One-line docstring should fit on one line
    "D204",  # [*] 1 blank line required after class docstring
    "D209",  # [*] Multi-line docstring closing quotes should be on a separate line
    "D212",  # [*] Multi-line docstring summary should start at the first line
    "D301",  # Use `r"""` if any backslashes in a docstring
    "D403",  # [*] First word of the first line should be capitalized
    "PERF102",  # [*] When using only the keys of a dict use the `keys()` method
    "PERF401",  # Use a list comprehension to create a transformed list
    "S113",  # Probable use of requests call without timeout
    "S602",  # `subprocess` call with `shell=True` identified, security issue
]
ignore = [
    "A",  # flake8-builtins (shadowing of builtins like all, any, ...)
    "ANN",  # flake8-annotations
    "ARG001",  # unused-function-argument
    "ARG002",  # unused-method-argument
    "B007",  # Loop control variable `x` not used within loop body
    "C408",  # Unnecessary dict() call
    "C90",  # mccabe (function `X` is too complex)
    "COM812",  # Trailing comma missing
    "CPY001",  # Missing copyright notice at top of file
    "D",  # pydocstyle
    "DOC",  # various docstring warnings
    "DTZ",  # flake8-datetimez
    "ERA001",  # Found commented-out code
    "FBT",  # flake8-boolean-trap (makes zero sense)
    "FIX",  # Line contains TODO / XXX / ..., consider resolving the issue
    "FLY002",  # static-join-to-f-string / Consider {expression} instead of string join
    "FURB101",  # `open` and `read` should be replaced by `Path(src).read_text()`
    "FURB103",  # `open` and `write` should be replaced by `Path(src).write_text()`
    "FURB116",  # [*] Replace `hex` call with `f"{start:x}"`
    "FURB118",  # [*] Use `operator.add` instead of defining a lambda
    "FURB140",  # [*] Use `itertools.starmap` instead of the generator
    "INP",  # flake8-no-pep420
    "N801",  # Class name `async_chat` should use CapWords convention (ASYNCORE COMPAT)
    "N802",  # Function name X should be lowercase.
    "N806",  # Variable X in function should be lowercase.
    "N818",  # Exception name `FooBar` should be named with an Error suffix
    "PERF",  # Perflint
    "PLC0415",  # `import` should be at the top-level of a file
    "PLC2701",  # Private name import `x` from external module `y`
    "PLR0904",  # Too many public methods (x > y)
    "PLR0911",  # Too many return statements (8 > 6)
    "PLR0912",  # Too many branches (x > y)
    "PLR0913",  # Too many arguments in function definition (x > y)
    "PLR0914",  # Too many local variables (x/y)
    "PLR0915",  # Too many statements (x > y)
    "PLR0917",  # Too many positional arguments (x/y)
    "PLR1702",  # Too many nested blocks (x > y)
    "PLR1704",  # Redefining argument with the local name `type_`
    "PLR2004",  # Magic value used in comparison, consider replacing X with a constant variable
    "PLR6301",  # Method `x` could be a function, class method, or static method
    "PLW0603",  # Using the global statement to update `lineno` is discouraged
    "PLW1514",  # `open` in text mode without explicit `encoding` argument
    "PLW2901",  # `for` loop variable `x` overwritten by assignment target
    "PT028",  # pytest-parameter-with-default-argument
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi (python types stuff)
    "Q000",  # Single quotes found but double quotes preferred
    "RET502",  # Do not implicitly `return None` in function able to return non-`None` value
    "RET503",  # Missing explicit `return` at the end of function able to return non-`None` value
    "RET504",  # Unnecessary assignment to `result` before `return` statement
    "RET505",  # [*] Unnecessary `else` after `return` statement
    "RUF005",  # Consider iterable unpacking instead of concatenation
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "RUF022",  # `__all__` is not sorted
    "RUF028",  # This suppression comment is invalid
    "RUF031",  # [*] Avoid parentheses for tuples in subscripts
    "RUF067",  # `__init__` module should only contain docstrings and re-exports
    "S",  # flake8-bandit
    "SIM102",  # Use a single `if` statement instead of nested `if` statements
    "SIM105",  # Use `contextlib.suppress(OSError)` instead of `try`-`except`-`pass`
    "SIM117",  # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "SLF",  # flake8-self
    "T201",  # `print` found
    "TD",  # all TODOs, XXXs, etc.
    "TRY300",  # Consider moving this statement to an `else` block
    "TRY301",  # Abstract `raise` to an inner function
    "UP032",  # [*] Use f-string instead of `format` call
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B904", "EM101", "EM102", "EM103", "PLC1901", "RUF069", "TRY003"]

[tool.ruff.lint.isort]
force-single-line = true  # one import per line

[tool.tomlsort]
in_place = true
no_sort_tables = true
sort_inline_arrays = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
